@@ -1154,5 +1154,12 @@ Wed Nov 14 11:50:27 CET 2001
 Tue Dec  4 13:30:32 CET 2001
 
 	- Fixed dumping of structures without indicators.
+
+Wed Dec  5 12:27:25 CET 2001
+
+	- Fixed variable handling in AT statement.
+	- Fixed bug that caused segfault when given incorrect DB name.
+	- Fixed bug in ecpglib causing indicator to list the size of the
+	  variable instead of the size of the data.
 	- Set ecpg version to 2.9.0.
         - Set library version to 3.3.0.
